[gd_scene load_steps=9 format=3 uid="uid://btl27tf157rs5"]

[ext_resource type="Script" path="res://tower/tower.gd" id="1_lgnhb"]
[ext_resource type="Texture2D" uid="uid://b8tbbb5ghnrdc" path="res://tower/env.png" id="2_gtefy"]
[ext_resource type="Script" path="res://tower/building_manager.gd" id="2_qc6mu"]
[ext_resource type="Script" path="res://tower/building.gd" id="3_51hqr"]
[ext_resource type="Script" path="res://tower/GroundMap.gd" id="3_gn882"]
[ext_resource type="TileSet" uid="uid://drgq806ewpsqf" path="res://tower/tower-tileset.tres" id="4_7rioh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ubhxm"]
texture = ExtResource("2_gtefy")
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
9:0/0 = 0
10:0/0 = 0
8:0/0 = 0
8:1/0 = 0
8:2/0 = 0
9:1/0 = 0
9:2/0 = 0
10:1/0 = 0
10:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0

[sub_resource type="TileSet" id="TileSet_t7wdc"]
sources/0 = SubResource("TileSetAtlasSource_ubhxm")

[node name="tower" type="Node2D" node_paths=PackedStringArray("tileMap")]
script = ExtResource("1_lgnhb")
tileMap = NodePath("BuildingManager/TowerMap")

[node name="GroundMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_t7wdc")
format = 2
layer_0/tile_data = PackedInt32Array(65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 12, 524288, 0, 11, 524288, 0, 10, 524288, 0, 9, 524288, 0, 8, 524288, 0, 7, 524288, 0, 6, 655360, 0, 65531, 0, 1, 65530, 0, 1, 65529, 589824, 0, 65528, 524288, 0, 65527, 524288, 0, 65526, 524288, 0, 65525, 524288, 0, 65524, 524288, 0, 65523, 524288, 0, 131059, 131072, 1, 196595, 131072, 1, 262131, 65536, 1, 327667, 65536, 1, 393203, 131072, 1, 458739, 65536, 1, 65548, 131072, 1, 131084, 131072, 1, 196620, 65536, 1, 262156, 65536, 1, 327692, 131072, 1, 393228, 65536, 1, 524275, 65536, 1, 458764, 65536, 1, 458763, 65536, 1, 458762, 65536, 1, 458761, 65536, 1, 458760, 65536, 1, 458759, 65536, 1, 458758, 65536, 1, 458757, 65536, 1, 458756, 65536, 1, 458755, 65536, 1, 458754, 65536, 1, 458753, 65536, 1, 458752, 65536, 1, 524287, 65536, 1, 524286, 65536, 1, 524285, 65536, 1, 524284, 65536, 1, 524283, 65536, 1, 524282, 65536, 1, 524281, 65536, 1, 524280, 65536, 1, 524279, 65536, 1, 524278, 65536, 1, 524277, 65536, 1, 524276, 65536, 1, 458742, 65536, 1, 393206, 131072, 1, 327670, 65536, 1, 262134, 65536, 1, 196598, 131072, 1, 131062, 131072, 1, 131061, 131072, 1, 131060, 131072, 1, 196596, 131072, 1, 262132, 65536, 1, 327668, 65536, 1, 393204, 131072, 1, 458740, 65536, 1, 458741, 65536, 1, 393205, 131072, 1, 327669, 65536, 1, 262133, 65536, 1, 196597, 131072, 1, 131063, 131072, 1, 196599, 131072, 1, 262135, 65536, 1, 327671, 65536, 1, 393207, 131072, 1, 458743, 65536, 1, 458744, 65536, 1, 393208, 131072, 1, 327672, 65536, 1, 262136, 65536, 1, 196600, 131072, 1, 131064, 131072, 1, 131065, 65536, 1, 196601, 131072, 1, 262137, 65536, 1, 327673, 65536, 1, 393209, 131072, 1, 458745, 65536, 1, 458746, 65536, 1, 393210, 131072, 1, 327674, 65536, 1, 262138, 65536, 1, 196602, 131072, 1, 131066, 65536, 1, 131067, 65536, 1, 196603, 131072, 1, 262139, 65536, 1, 327675, 65536, 1, 393211, 131072, 1, 458747, 65536, 1, 458748, 65536, 1, 393212, 131072, 1, 327676, 65536, 1, 262140, 65536, 1, 196604, 131072, 1, 131068, 65536, 1, 131069, 65536, 1, 196605, 131072, 1, 262141, 65536, 1, 327677, 65536, 1, 393213, 131072, 1, 458749, 65536, 1, 458750, 65536, 1, 393214, 131072, 1, 327678, 65536, 1, 262142, 65536, 1, 196606, 131072, 1, 131070, 65536, 1, 131071, 65536, 1, 196607, 131072, 1, 262143, 65536, 1, 327679, 65536, 1, 393215, 131072, 1, 458751, 65536, 1, 393216, 65536, 1, 327680, 131072, 1, 262144, 65536, 1, 196608, 65536, 1, 131072, 131072, 1, 65536, 65536, 1, 65537, 65536, 1, 131073, 131072, 1, 196609, 65536, 1, 262145, 65536, 1, 327681, 131072, 1, 393217, 65536, 1, 393218, 65536, 1, 327682, 131072, 1, 262146, 65536, 1, 196610, 65536, 1, 131074, 131072, 1, 65538, 65536, 1, 65539, 65536, 1, 131075, 131072, 1, 196611, 65536, 1, 262147, 65536, 1, 327683, 131072, 1, 393219, 65536, 1, 393220, 65536, 1, 327684, 131072, 1, 262148, 65536, 1, 196612, 65536, 1, 131076, 131072, 1, 65540, 65536, 1, 65541, 65536, 1, 131077, 131072, 1, 196613, 65536, 1, 262149, 65536, 1, 327685, 131072, 1, 393221, 65536, 1, 393222, 65536, 1, 327686, 131072, 1, 262150, 65536, 1, 196614, 65536, 1, 131078, 131072, 1, 65542, 65536, 1, 65543, 131072, 1, 131079, 131072, 1, 196615, 65536, 1, 262151, 65536, 1, 327687, 131072, 1, 393223, 65536, 1, 393224, 65536, 1, 327688, 131072, 1, 262152, 65536, 1, 196616, 65536, 1, 131080, 131072, 1, 65544, 131072, 1, 65545, 131072, 1, 131081, 131072, 1, 196617, 65536, 1, 262153, 65536, 1, 327689, 131072, 1, 393225, 65536, 1, 393226, 65536, 1, 327690, 131072, 1, 262154, 65536, 1, 196618, 65536, 1, 131082, 131072, 1, 65546, 131072, 1, 65547, 131072, 1, 131083, 131072, 1, 196619, 65536, 1, 262155, 65536, 1, 327691, 131072, 1, 393227, 65536, 1, -6, 0, 2, -5, 65536, 2, -4, 131072, 2, -3, 196608, 2, -2, 262144, 2, -1, 327680, 2, -65536, 393216, 2, -65535, 458752, 2, -65534, 0, 2, -65533, 65536, 2, -65532, 131072, 2, -65531, 196608, 2)
script = ExtResource("3_gn882")

[node name="BuildingManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_qc6mu")

[node name="Building" type="Node" parent="BuildingManager"]
script = ExtResource("3_51hqr")

[node name="TowerMap" type="TileMap" parent="BuildingManager"]
tile_set = ExtResource("4_7rioh")
format = 2
layer_0/name = "Building"
layer_1/name = "Decoration"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="PreviewMap" type="TileMap" parent="BuildingManager"]
tile_set = ExtResource("4_7rioh")
format = 2
layer_0/name = "Building"
layer_1/name = "Decoration"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[connection signal="base_capacity" from="BuildingManager" to="." method="_on_building_manager_base_capacity"]
[connection signal="building_placed" from="BuildingManager" to="." method="_on_building_manager_building_placed"]
